# pandemonium_protocol

./: .gitignore  .mcp.json  .pandemoniumignore  IMPROVEMENTS.md  PART 2.md  RAG LLM DEV TOOL KIT.md  README.md  ROADMAP.md  _diag_index.py  _probe_stem.py  pandemonium-graph.html  pandemonium.yaml  pyproject.toml
docs/: ARCHITECTURE.md  BUILD_LOG.md  IMPROVEMENTS3_ASSESSMENT.md  IMPROVEMENTS5_ASSESSMENT.md  IMPROVEMENTS6-7_ASSESSMENT.md  IMPROVEMENTS6_ASSESSMENT.md  IMPROVEMENTS7_ASSESSMENT.md  Improvement6.txt  Improvement7.txt  Improvements.txt  Improvements2.txt  Improvements3.txt  Improvements4.txt  Improvements5.txt  REVIEW_RESPONSE.md  ROADMAP.md
evals/: AB_RESULTS.md  RESULTS.md  _offline_test.py  _probe_armb_stream.py  ab_runner.py  ab_tasks.py  ab_tasks_extra.json  baseline.json  gold.py  matrix_baseline.json  mcp_smoke.py  model_bakeoff.py  phase1.json  phase2.json  phase3.json  qa_ab_runner.py  qa_impact_ab_runner.py  qa_impact_tasks_sg.json  reliability_metrics.json  roadmap_v2_baseline.json  run_eval.py  tasks.example.json  validate_impact_vs_gold.py
pandemonium/: __init__.py  breakage.py  brief.py  descriptor.py  enrich.py  graph.py  health.py  mapping.py  models.py  refs.py  secret_filter.py  service.py  session.py  skeleton.py  tags.py  usage.py  util.py  viz.py
tests/: conftest.py  support.py  test_auto_reindex.py  test_breakage.py  test_brief.py  test_caller_graph_regression.py  test_cast.py  test_complement_card.py  test_confidence.py  test_context_pack.py  test_cpp_header_merge.py  test_edge_provenance.py  test_enrich.py  test_eval_gate.py  test_graph.py  test_health.py  test_mcp.py  (+12 more)
(+109 files in other folders)
